# vernier

./: .gitignore  CMakeLists.txt  README.md  _bitmap_pattern_detector_8cpp_source.html  _bitmap_pattern_detector_8hpp_source.html  _bitmap_pattern_layout_8cpp_source.html  _bitmap_pattern_layout_8hpp_source.html  _bitmap_thumbnail_8cpp_source.html  _bitmap_thumbnail_8hpp_source.html  _buffered_reader_8cpp_source.html  _buffered_reader_8hpp_source.html  _common_8hpp_source.html  _custom_pattern_layout_8cpp_source.html  _custom_pattern_layout_8hpp_source.html  _detector_8hpp_source.html  _exception_8cpp_source.html  _exception_8hpp_source.html  _fingerprint_pattern_layout_8cpp_source.html  _fingerprint_pattern_layout_8hpp_source.html  _fourier_transform_8cpp_source.html  _fourier_transform_8hpp_source.html  _h_p_code_pattern_detector_8cpp_source.html  _h_p_code_pattern_detector_8hpp_source.html  _h_p_code_pattern_layout_8cpp_source.html  _h_p_code_pattern_layout_8hpp_source.html  _layout_8hpp_source.html  _megarena_absolute_decoding_8cpp_source.html  _megarena_absolute_decoding_8hpp_source.html  _megarena_bit_sequence_8cpp_source.html  _megarena_bit_sequence_8hpp_source.html  _megarena_cell_8cpp_source.html  _megarena_cell_8hpp_source.html  _megarena_pattern_detector_8cpp_source.html  _megarena_pattern_detector_8hpp_source.html  _megarena_pattern_layout_8cpp_source.html  _megarena_pattern_layout_8hpp_source.html  _megarena_thumbnail_8cpp_source.html  _megarena_thumbnail_8hpp_source.html  _pattern_detector_8cpp_source.html  _pattern_detector_8hpp_source.html  (+166 more)
.github/workflows/: build.yml
doc/: CMakeLists.txt  Doxyfile.conf  pages.dox  pages.md
examples/: CMakeLists.txt  QRCodePattern.json  analysingImage.cpp  analysingPatternFromFile.cpp  analysingPatternImage.cpp  bitmapPattern.json  detectingHPCodePattern.cpp  detectingMegarenaPatter3D.cpp  detectingMegarenaPattern.cpp  detectingMegarenaPattern2d.cpp  detectingMegarenaPattern3D.cpp  detectingMegarenaPattern3d.cpp  detectingMegarenaPattern3dPerspective.cpp  detectingMegarenaPatternFromCamera.cpp  detectingMegarenaPatternFromFile.cpp  detectingPeriodicPattern2d.cpp  detectingPeriodicPattern3d.cpp  detectingPeriodicPattern3dPerspective.cpp  detectingStampPattern.cpp  generatingPNGfromJSON.cpp  generatingPatternLayout.cpp  generatingSVGfromJSON.cpp  megarenaPattern.json  megarenaPattern.oas  renderingBitmapPatternIn3D.cpp  renderingPatternImage.cpp  renderingPatternIn2D.cpp  renderingPatternIn3D.cpp  stampPattern.json
include/: AbsoluteDecoding.hpp  BitmapPatternDetector.hpp  BitmapPatternLayout.hpp  BitmapThumbnail.hpp  BufferedReader.hpp  Camera.hpp  Cell.hpp  Common.hpp  CustomPatternLayout.hpp  Detector.hpp  Exception.hpp  FingerprintPatternLayout.hpp  FourierTransform.hpp  GaussianFilter.hpp  HPCodeDetector.hpp  HPCodeLayout.hpp  HPCodePatternDetector.hpp  HPCodePatternLayout.hpp  Layout.hpp  MegarenaAbsoluteDecoding.hpp  MegarenaBitSequence.hpp  MegarenaCell.hpp  MegarenaPatternDetector.hpp  MegarenaPatternLayout.hpp  MegarenaThumbnail.hpp  PatternDetector.hpp  PatternLayout.hpp  PatternPhase.hpp  PatternRenderer.hpp  PeriodicPatternDetector.hpp  PeriodicPatternLayout.hpp  PhasePlane.hpp  Plane.hpp  Pose.hpp  QRCode.hpp  QRCodeDetector.hpp  QRCodePatternCannyDetector.hpp  QRCodePatternDetector.hpp  QRCodePatternLayout.hpp  QRCodePoseEstimation.hpp  (+16 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+26 more)
src/: AbsoluteDecoding.cpp  BitmapPatternDetector.cpp  BitmapPatternLayout.cpp  BitmapThumbnail.cpp  BufferedReader.cpp  CMakeLists.txt  Cell.cpp  CustomPatternLayout.cpp  Exception.cpp  FingerprintPatternLayout.cpp  FourierTransform.cpp  GaussianFilter.cpp  HPCodeDetector.cpp  HPCodeLayout.cpp  HPCodePatternDetector.cpp  HPCodePatternLayout.cpp  MegarenaAbsoluteDecoding.cpp  MegarenaBitSequence.cpp  MegarenaBitSequences.cpp  MegarenaCell.cpp  MegarenaPatternDetector.cpp  MegarenaPatternLayout.cpp  MegarenaThumbnail.cpp  PatternDetector.cpp  PatternLayout.cpp  PatternPhase.cpp  PatternRenderer.cpp  PeriodicPatternDetector.cpp  PeriodicPatternLayout.cpp  PhasePlane.cpp  Plane.cpp  Pose.cpp  QRCode.cpp  QRCodeDetector.cpp  QRCodePatternCannyDetector.cpp  QRCodePatternDetector.cpp  QRCodePatternLayout.cpp  QRCodePoseEstimation.cpp  QRCodeThumbnail.cpp  QRFiducialDetector.cpp  (+13 more)
test/: BitmapPatternDetector.json  CMakeLists.txt  QRCodePattern.csv  TestAbsoluteDecoding.cpp  TestAbsoluteDecoding.hpp  TestBitSequence.cpp  TestBitSequence.hpp  TestBitmapPattern.cpp  TestBitmapPattern.hpp  TestBufferedReader.cpp  TestBufferedReader.hpp  TestCell.cpp  TestCell.hpp  TestEigen.hpp  TestFingerprintPattern.hpp  TestFourierTransform.cpp  TestFourierTransform.hpp  TestGaussianFilter.cpp  TestGaussianFilter.hpp  TestHPCodeDetector.cpp  TestHPCodeDetector.hpp  TestMegarenaPatternDetector.cpp  TestMegarenaPatternDetector.hpp  TestPattern.cpp  TestPattern.hpp  TestPatternDetector.hpp  TestPatternLayout.cpp  TestPatternLayout.hpp  TestPatternPhase.cpp  TestPatternPhase.hpp  TestPatternProjection.hpp  TestPatternRenderer.hpp  TestPatternRendering.hpp  TestPeriodicPatternDetector.cpp  TestPeriodicPatternDetector.hpp  TestPose.cpp  TestPose.hpp  TestQRCodeCannyDetector.cpp  TestQRCodeCannyDetector.hpp  TestQRCodeDetector.cpp  (+29 more)
test/data/: CMakeLists.txt
test/data/Image140/: results.csv
test/data/QRCode/: code22.tif
test/data/megarena/: CMakeLists.txt
test/testfiles/: CMakeLists.txt  periodicPattern.json
test/testfiles/Image140/: results.csv
